changed styles to prevent chrome adding vertical spacing between divs at random levels of zoom

--- a/scss/profile_item.scss
+++ b/scss/profile_item.scss
@@ -46,6 +46,8 @@ div.item-page {
   .field-container, .field-row {
     display: inline-block;
     float: left;
+    margin-top: -1px;
+    padding-top: 1px;
     padding-bottom: 15px;
   }
 
@@ -63,6 +65,11 @@ div.item-page {
     text-align: right;
     vertical-align: top;
     width: 120px;
+  }
+
+  .field-container-label:before, .field-row-label:before {
+    position: relative;
+    top: 2px;
   }
 }
 
